[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fench.gd" type="Script" id=1]
[ext_resource path="res://assets/obstacles/start/skia.png" type="Texture" id=2]
[ext_resource path="res://assets/obstacles/start/aristera.png" type="Texture" id=3]
[ext_resource path="res://assets/obstacles/start/pesmenolayerM.png" type="Texture" id=4]
[ext_resource path="res://assets/obstacles/start/pesmenolayerPP.png" type="Texture" id=5]
[ext_resource path="res://assets/obstacles/start/signsketo.png" type="Texture" id=6]
[ext_resource path="res://assets/obstacles/start/fenchsketo.png" type="Texture" id=7]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -152.213, -55.0962 )
b = Vector2( -87.8613, 10.5825 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -27.9696, 62.1125 )
b = Vector2( 37.9652, 131.616 )

[node name="Fench" type="Node2D"]
script = ExtResource( 1 )

[node name="Graphics" type="Node2D" parent="."]

[node name="Shadow" type="Sprite" parent="Graphics"]
texture = ExtResource( 2 )

[node name="LUp" type="Sprite" parent="Graphics"]
z_index = 3
texture = ExtResource( 3 )

[node name="RFall" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( 40.2275, 73.9377 )
texture = ExtResource( 4 )

[node name="RRFall" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( 107.318, 145.463 )
texture = ExtResource( 4 )

[node name="LFall" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( -87.0197, -41.0797 )
texture = ExtResource( 4 )

[node name="RFallUp" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( 37.336, 72.9577 )
z_index = 8
texture = ExtResource( 5 )

[node name="RRFallUp" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( 106.941, 146.97 )
z_index = 5
texture = ExtResource( 5 )

[node name="LFallUp" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( -85.9195, -42.571 )
z_index = 5
texture = ExtResource( 5 )

[node name="Sign" type="Sprite" parent="Graphics"]
position = Vector2( -49.5161, -43.5757 )
z_index = 5
texture = ExtResource( 6 )

[node name="RUp" type="Sprite" parent="Graphics"]
z_index = 7
texture = ExtResource( 7 )

[node name="RRUp" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( 67.3149, 71.0325 )
texture = ExtResource( 7 )

[node name="LFench" type="Area2D" parent="."]

[node name="LSeg" type="CollisionShape2D" parent="LFench"]
shape = SubResource( 1 )

[node name="RFench" type="Area2D" parent="."]

[node name="RSeg" type="CollisionShape2D" parent="RFench"]
shape = SubResource( 2 )

[node name="RRFench" type="Area2D" parent="."]
visible = false

[node name="RRSeg" type="CollisionShape2D" parent="RRFench"]
position = Vector2( 67.0047, 71.8679 )
shape = SubResource( 2 )
[connection signal="body_entered" from="LFench" to="." method="_on_LFench_body_entered"]
[connection signal="body_entered" from="RFench" to="." method="_on_RFench_body_entered"]
[connection signal="body_entered" from="RRFench" to="." method="_on_RRFench_body_entered"]
